--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span> 
                 </button>
-                <a class="navbar-brand" href="#">Metropolia</a>
+                <a class="navbar-brand" href="http://metropolia.fi" target="_blank" alt="my school here">Metropolia</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
@@ -70,16 +70,16 @@
                     <img src="http://users.metropolia.fi/~hail/Images/northen.jpg" alt="northen light" width="1200" height="800">
                     <div class="carousel-caption">
                         <img id="profile" src="http://users.metropolia.fi/~hail/Images/profile.jpg" alt="profile" class="img-circle img-responsive">
-                        <h4>Hi there, I am Jacky</h4>
-                        <p>I am a BBA graduate from Finland</p>
+                        <h4>Hi there, you may call me Hai or Jacky</h4>
+                        <p>I am a graduated BBA and IT enthusiast from Finland</p>
                     </div>
                 </div>
 
                 <div class="item">
                     <img src="http://users.metropolia.fi/~hail/Images/IT.jpg" alt="second degree" width="1200" height="800">
                     <div class="carousel-caption">
-                        <h4>IT engineer is my second degree</h4>
-                        <p>I have finished about 80% of my second degree with GPA 4.5</p>
+                        <h4>I am not a time killer :) but rather a time 'saver'. I always try my best, learn things effectively</h4>
+                        <p>While working full-timely, I use time effectively and have finished about 80% of my second degree with a GPA 4.5</p>
                     </div>
                 </div>
 
@@ -94,8 +94,8 @@
                 <div class="item">
                     <img src="http://users.metropolia.fi/~hail/Images/music.jpg" alt="leisure" width="1200" height="800">
                     <div class="carousel-caption">
-                        <h4 style="color: black">When I don't code</h4>
-                        <p style="color:black">I pracice martial art and listen to music in my walkman</p>
+                        <h4 style="color: black">When I am not coding</h4>
+                        <p style="color:black">I enjoy reading books, practising yoga and listening to music in my walkman</p>
                     </div>
                 </div>
             </div>
@@ -116,26 +116,41 @@
 
     <!-- Skills part , A link which can downloaded CV in pdf and word format -->
     <div id="skills" class="container-fluid bg-success">
-        <h3 class="text-primary text-center">My Skills </h3>
+        <h3 class="row text-primary text-center">IT Skills </h3>
         <div class="row text-center slideanim">
             <div class="col-xs-4 web">
 
-                <p>Web Development</p>
+                <p>Web Development, HTML,CSS,JS</p>
                 <img src="http://users.metropolia.fi/~hail/Images/web.png" class="img-responsive img-rounded center-block" width="128" height="128">
 
             </div>
             <div class="col-xs-4 data-mining">
 
-                <p>Data structure and alogorithm</p>
+                <p>Data structure and alogorithm, C,C++, Java and Python</p>
                 <img src="http://users.metropolia.fi/~hail/Images/coding.png" class="img-responsive img-rounded center-block" width="128" height="128">
 
             </div>
 
             <div class="col-xs-4 real-time">
 
-                <p>Unix/Linux, Real-time system</p>
+                <p>Unix/Linux, Real-time system management</p>
                 <img src="http://users.metropolia.fi/~hail/Images/linux.jpg" class="img-responsive img-rounded center-block" width="128" height="128">
 
+            </div>
+        </div>
+
+        <hr style="border:black solid 2px">
+
+
+        <h3 class="row text-primary text-center">Business Skills </h3>
+        <div class="row text-center slideanim">
+            <div class="col-xs-12">
+                <ul class="list-group">
+                    <li class="list-group-item active">Financial management</li>
+                    <li class="list-group-item">Supply chain and logistics management</li>
+                    <li class="list-group-item active">Delegation and time management</li>
+                    <li class="list-group-item">Communication and negotiation</li>
+                </ul>
             </div>
         </div>
 
@@ -167,7 +182,8 @@
 
     <!-- Project show case -->
     <div id="portfolio" class="container-fluid bg-4">
-        <h3 class="text-primary text-center">My Projects </h3>
+        <h3 class="row text-center">My Projects </h3>
+        <br>
         <div class="row slideanim">
             <div class="col-sm-3 text-center">
                 <div id="conversion_webapp" class="thumbnail">
@@ -218,6 +234,8 @@
             </div>
 
         </div>
+        <br>
+        <h4 class="row text-center">Find out more my recently done <a href="http://users.metropolia.fi/~hail/Webs/" target="_blank"> projects</a> via my <a href="https://codepen.io/duonghailee/" target="_blank">codepen</a> and <a href="https://github.com/duonghailee" target="_blank">github</a></h4>
     </div>
 
 
@@ -376,9 +394,9 @@
                 <img src="http://users.metropolia.fi/~hail/hailee.jpg" class="img-responsive img-rounded" width="320" height="320">
             </div>
             <div class="col-xs-8">
-                <p id="suomea">Olen 26-vuotias Espoon asuva opiskelija, nimeni on Hai. Valmistuin taloushallinnon tradenomiksi Lamkista vuonna 2014. Opinnäytetyöni tein aiheesta "Pankin markkinointi hallinta". Opiskeluaikanani toimin osa-aikaisena varaston työntekijänä
-                    yrityksessä Transval Fast oy. Lisäksi, minulla on ollut päri töitä: siivooja, pakkaja, henkilökohtainen avustaja,... Voisin itse sanoa itselleni, että olen ahkera, sosiaalinen, oma-aloitteinen, reipas ja myös innokas oppimaan utta
-                    työntekijä. Olen opiskellut Metropolia AMK:ssa tietokone teknikkaa joo 2 vuotta, GPA on 4.5.
+                <p id="suomea">Moi, Olen 26-vuotias Espoon asuva opiskelija, nimeni on Hai ja Vietnam on minun kotimaahani. Valmistuin taloushallinnon tradenomiksi Lamkista vuonna 2014. Opinnäytetyöni tein aiheesta "Pankin markkinointi hallinta". Opiskeluaikanani toimin
+                    osa-aikaisena varaston työntekijänä yrityksessä Transval Fast oy. Lisäksi, minulla on ollut päri töitä: siivooja, pakkaaja, henkilökohtainen avustaja, palkanlaskija... Voisin sanoa itselleni, että olen ahkera, sosiaalinen, oma-aloitteinen,
+                    reipas ja myös innokas oppimaan uutta työntekijä. Olen opiskellut Metropolia AMK:ssa tietokone teknikkaa joo 2 vuotta, GPA on 4.5.
                     </br>
                     Minulle Suomi on ihan rauhallinen ja turvallinen maa. Pidän Suomen kesästä, lumesta ja musikkista.
                     </br>
